# fueltracker

./: README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/: app.py  data.py  models.py
frontend/: README.md  package-lock.json  package.json
frontend/src/lib/: holidays.ts  utils.ts
frontend/src/lib/components/: MapPopup.svelte
frontend/src/lib/styles/: styles.css
frontend/src/routes/: +layout.svelte  +page.svelte
