[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=46.0.7",
    "ephaptic>=0.4.1",
    "fastapi[standard]>=0.135.3",
    "httpx>=0.28.1",
    "pandas>=3.0.2",
    "pydantic>=2.12.5",
    "uvicorn[standard]>=0.44.0",
]
